--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notetaker",
   "version": "1.0.0",
   "description": "Just run the package with \"npm start\", fill in the title and description of the note and hit the \"save\" button in the upper-right hand corner!",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
