updating file structure

--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "notetaker",
+  "name": "note-taker",
   "version": "1.0.0",
-  "description": "Just run the package with \"npm start\", fill in the title and description of the note and hit the \"save\" button in the upper-right hand corner!",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aBraveNewURL/ExpressExce11ence.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aBraveNewURL/ExpressExce11ence/issues"
-  },
-  "homepage": "https://github.com/aBraveNewURL/ExpressExce11ence#readme"
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
